--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'The Wonders of Life
 
   A Popular Study of Biological Philosophy'
